# MDS-picoblaze-AVR-ide

./: Coding Convention.tex  Licensing agreement.docx  Privacy Policy.txt  README.md  Sales and Refund Policy.txt  xchalu10.tex
IDE/: CMakeLists.txt  ChangeLog.txt  Doxyfile.in  FlexBisonPair.cmake  MDSFindLatex.cmake  QtHelpTools.cmake  build-pkg.sh  captureOutput.sh  cross-compilation.cmake  gccColor.sh  ldColor.sh  mds.cmake  readme.txt  runMdsCompiler.sh  tabs2spaces.sh  tests.cmake  tool.sh  windres.cmake
IDE/GUI/: CMakeLists.txt  CMakeLists.txt~  compileOpt.xml  icons.qrc  main.cpp  qtvalgrind.sh  readme.txt  todo.txt
IDE/GUI/compatibilitymode/: CMakeLists.txt  compatibilitymode.cpp  compatibilitymode.h
IDE/GUI/demoprojekt/: CMakeLists.txt  Example.mmp  a.asm  kcpsm3_mac.inc
IDE/GUI/dialogs/: CMakeLists.txt  cfginterface.cpp  cfginterface.h  errordlg.cpp  errordlg.h  filemgr.cpp  filemgr.h  projectcfg_compiler.cpp  projectcfg_compiler.h  projectcfg_comppaths.cpp  projectcfg_comppaths.h  projectcfg_filemgr.cpp  projectcfg_filemgr.h  projectcfg_general.cpp  projectcfg_general.h  projectcfgdlg_core.cpp  projectcfgdlg_core.h  projectdlg.cpp  projectdlg.cpp~  projectdlg.h
IDE/GUI/enums/: enums.h
IDE/GUI/errordialog/: CMakeLists.txt  errordlg.cpp  errordlg.h  errordlg.ui
IDE/GUI/guicfg/: CMakeLists.txt  guicfg.cpp  guicfg.h  guicfg_items.h
IDE/GUI/mainform/: CMakeLists.txt  guicfgstruct.h  mainform.cpp  mainform.cpp~  mainform.h  mainform.h~  pluginman_gui.cpp  pluginman_gui.h  project.cpp  project.cpp~  project.h  project.h~
IDE/GUI/plugins/: pluginlist  pluginlist.xml
IDE/GUI/project/: CMakeLists.txt  project.cpp  project.h
IDE/GUI/resources/: CMakeLists.txt
IDE/GUI/translator/: translator.qph
IDE/GUI/tut_pro_abysse/: CMakeLists.txt  main.cpp  main.h  readme  untitled.ui
IDE/GUI/widgets/: CMakeLists.txt  codeedit.cpp  codeedit.cpp~  codeedit.h  codeedit.h~  hexedit.cpp  hexedit.h  movgridlayout.cpp  movgridlayout.h  movgridlayoutitem.cpp  movgridlayoutitem.h  projecttree.cpp  projecttree.h  testgrid.cpp  wcolumncounter.cpp  wcolumncounter.h  wdockmanager.cpp  wdockmanager.cpp~  wdockmanager.h  wdockmanager.h~  wlinecounter.cpp  wlinecounter.h  wsimulationinfo.cpp  wsimulationinfo.h
IDE/HW/: CMakeLists.txt  readme.txt
IDE/HW/Avr8UsbProg/: Avr8IspProgXml10.dtd  Avr8UsbProg.qrc  Avr8UsbProgCore.cxx  Avr8UsbProgCore.h  Avr8UsbProgDeviceDB.cxx  Avr8UsbProgDeviceDB.h  Avr8UsbProgHid.cxx  Avr8UsbProgHid.h  Avr8UsbProgIsp.cxx  Avr8UsbProgIsp.h  Avr8UsbProgPlugin.cxx  Avr8UsbProgPlugin.h  Avr8UsbProgPlugin.ui  Avr8UsbProgThread.cxx  Avr8UsbProgThread.h  CMakeLists.txt  HWPluginInterface.h  devices.xml  main.cxx
IDE/HW/hid_util/: CMakeLists.txt  main.cxx
IDE/HW/usb_util/: CMakeLists.txt  main.cxx
IDE/Programmer/Programmer/: Programmer.atsln  Programmer.atsuo
IDE/Programmer/eagle/: atmega16prog.brd  atmega16prog.sch
IDE/assembler/: CMakeLists.txt  readme.txt
IDE/assembler/core/: CMakeLists.txt
IDE/assembler/grammar/: CMakeLists.txt  avr8parser.y  pic8lexer.l  readme.txt
IDE/compiler/: CMakeLists.txt  Compiler.cxx  Compiler.h  CompilerThread.cxx  CompilerThread.h  main.cxx  test_file_avr8_0.asm  test_file_mcs51_0.asm  test_file_mcs51_1.asm
IDE/compiler/core/: CMakeCache.txt  CMakeLists.txt  Compiler.cxx  Compiler.h  CompilerBase.cxx  CompilerBase.h  CompilerCore.cxx  CompilerCore.h  CompilerExpr.cxx  CompilerExpr.h  CompilerFileHeaders.h  (+44 more)
IDE/disassembler/: CMakeLists.txt  DAsm.cxx  DAsm.h  DAsmCore.cxx  DAsmCore.h  main.cxx
IDE/docs/: CMakeLists.txt  readme.txt
IDE/moraviascript/: CMakeLists.txt  MScript.cxx  MScript.h  MScriptArrayIndex.cxx  MScriptArrayIndex.h  MScriptBase.cxx  MScriptBase.h  MScriptComplex.cxx  MScriptComplex.h  MScriptCore.cxx  MScriptCore.h  MScriptExecContext.cxx  MScriptExecContext.h  MScriptExpr.cxx  MScriptExpr.h  MScriptExprAlgebra.cxx  MScriptExprAlgebra.h  MScriptExprProcessor.cxx  MScriptExprProcessor.h  MScriptExprSolver.cxx  MScriptExprSolver.h  MScriptFuncTable.cxx  MScriptFuncTable.h  MScriptIdManager.cxx  MScriptIdManager.h  MScriptInterpret.cxx  MScriptInterpret.h  MScriptInterpretInterface.h  MScriptLexer.l  MScriptLexerAuxFunc.cxx  MScriptLexerAuxFunc.h  MScriptNamespaces.cxx  MScriptNamespaces.h  MScriptParser.y  MScriptParserInterface.cxx  MScriptParserInterface.h  MScriptSerializable.cxx  MScriptSerializable.h  MScriptSerializer.cxx  MScriptSerializer.h  (+22 more)
IDE/pkgs/: CMakeLists.txt  CMakeLists.txt~  FileAssociation.nsh  application-x-mds-project.xml  application-x-mds.xml  application-x-mmIDE.xml  mds-ide.appdata.xml  mds-ide.desktop  mmIDE.desktop  pkgdesc-Commercial.txt  pkgdesc-Noncommercial.txt  pkgdesc-Profi.txt  pkgdesc-Trial.txt  pkgdesc.txt  pkglicense-Commercial.txt  pkglicense-Noncommercial.txt  pkglicense-Profi.txt  pkglicense-Trial.txt  pkglicense.txt  pkgreadme.txt  pkgwelcome.txt  readme.txt
IDE/simulators/: CMakeLists.txt  main.cxx  readme.txt
IDE/tests/: BuildLog2html.awk  CMakeLists.txt  CUnit-List.xsl  CUnit-Run.xsl  FilterMemcheckResults.awk  TestLog2html.awk  compressHtml.awk  coverage.sh  gcov2html.awk  gcovanalysis.sh  readme.txt  results2html.sh  valgrind2html.awk
IDE/utilities/: CMakeLists.txt  readme.txt
MCUSim/: CMakeLists.txt  MCUSim.h  build_on_windows.sh
MCUSim/AVR8/: AVR8Adc.h  AVR8AnalogComparator.h  AVR8BootLoader.cxx  AVR8BootLoader.h  AVR8CPUCore.cxx  AVR8CPUCore.h  AVR8ClockControl.cxx  AVR8ClockControl.h  AVR8Config.h  AVR8DES.h  AVR8DataEEPROM.cxx  AVR8DataEEPROM.h  AVR8DataMemory.cxx  AVR8DataMemory.h  AVR8ExternalInterrupts.cxx  AVR8ExternalInterrupts.h  AVR8Fuses.cxx  AVR8Fuses.h  AVR8FusesAndLocks.cxx  AVR8FusesAndLocks.h  AVR8IO.cxx  AVR8IO.h  AVR8InsNames.h  AVR8InstructionSet.cxx  AVR8InstructionSet.h  AVR8InterruptController.cxx  AVR8InterruptController.h  AVR8Isp.h  AVR8ParalelProg.h  AVR8PinNames.h  AVR8ProgramMemory.cxx  AVR8ProgramMemory.h  AVR8RegNames.h  AVR8Sim.cxx  AVR8Sim.h  AVR8Spi.h  AVR8SystemControl.cxx  AVR8SystemControl.h  AVR8TimerCounter0.cxx  AVR8TimerCounter0.h  (+11 more)
MCUSim/GUI/: CMakeLists.txt  CMakeLists.txt~  main.cpp
(+5134 files in other folders)
